hphp/hack/test/typecheck/expression_trees/elvis.php.exp
File "elvis.php", line 7, characters 13-27:
Expression trees do not support `_ ?: _` with two operands. Use `_ ? _ : _` instead. (Parsing[1002])
